[package]
name = "tokio-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tokio = { version = "1", features = ["full", "tracing"] }
tonic = "0.8.3"
tonic-reflection = "0.6.0"
redis = { version = "0.22.1", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "serviced"
path = "src/main.rs"
