[package]
name = "tokio-example"
version = "0.1.0"
edition = "2021"

[dependencies]
launchdarkly-server-sdk = "1.0.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
prost = "0.11"
rand = "0.8.5"
redis = { version = "0.22.1", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-modbus = { version = "0.5.1", default-features = false, features = ["tcp"] }
tokio-stream = "0.1"
tonic = "0.8.3"
tonic-health = "0.8.0"
tonic-reflection = "0.6.0"
tonic-web = "0.5.0"
tracing = "0.1"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = "0.3"
zmq = "0.10.0"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "serviced"
path = "src/main.rs"

[[bin]]
name = "modbus-poll"
path = "src/modbus_poll.rs"
